--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Atom Test Runner for Jest",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,32 @@
     "jest-cli": "^22.4.3",
     "pkg-up": "^2.0.0",
     "tmp": "^0.0.33"
+  },
+  "devDependencies": {
+    "@types/execa": "^0.9.0",
+    "@types/jest": "^23.1.1",
+    "@types/node": "^10.3.4",
+    "execa": "^0.10.0",
+    "jest": "^23.1.0",
+    "ts-jest": "^22.4.6",
+    "typescript": "^2.9.2"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/__tests__/__fixtures__/"
+    ]
   }
 }
