ci(travis): add atom and apm to path

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,10 @@ env:
     - ATOM_CHANNEL=stable
     - ATOM_CHANNEL=beta
   
-before_script:
+before_install:
   - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
   - chmod u+x build-package.sh
   - "./build-package.sh"
-  - echo "Disregard the message about adding specs."
+  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then; export PATH=${PATH}:${HOME}/atom/usr/bin/; fi
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then; export PATH=${PATH}:./atom/Atom.app/Contents/Resources/app/apm/node_modules/.bin/; fi
+  - echo "Disregard the previous message about adding specs."
