ci(test): ignore the /atom/ directory

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     ],
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "/__tests__/__fixtures__/"
+      "/__tests__/__fixtures__/",
+      "/atom/"
     ]
   }
 }
