--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,29 @@ before_install:
   - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
   - chmod u+x build-package.sh
   - "./build-package.sh"
-  - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then export PATH=${PATH}:${HOME}/atom/usr/bin/; fi
-  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then export PATH=${PATH}:./atom/Atom.app/Contents/Resources/app/apm/node_modules/.bin/; fi
   - echo "Disregard the previous message about adding specs."
+  -  |
+    if [ "${TRAVIS_OS_NAME}" = "linux" ]; then
+      if [ "${ATOM_CHANNEL}" = "stable" ] || [ "${ATOM_CHANNEL}" = "dev" ]; then
+        export ATOM_SCRIPT_NAME="atom"
+        export APM_SCRIPT_NAME="apm"
+      else
+        export ATOM_SCRIPT_NAME="atom-${ATOM_CHANNEL}"
+        export APM_SCRIPT_NAME="apm-${ATOM_CHANNEL}"
+      fi
+      
+      alias atom=${HOME}/atom/usr/bin/${ATOM_SCRIPT_NAME}
+      alias apm=${HOME}/atom/usr/bin/${APM_SCRIPT_NAME}
+    eif [ "${TRAVIS_OS_NAME}" = "osx" ]; then 
+      if [ "${ATOM_CHANNEL}" = "stable" ] || [ "${ATOM_CHANNEL}" = "dev" ]; then
+        export ATOM_APP_NAME="Atom.app"
+        export ATOM_SCRIPT_NAME="atom.sh"
+        export ATOM_SCRIPT_PATH="./atom/${ATOM_APP_NAME}/Contents/Resources/app/atom.sh"
+      else
+        export ATOM_APP_NAME="Atom ${ATOM_CHANNEL}.app"
+        export ATOM_SCRIPT_NAME="atom-${ATOM_CHANNEL}"
+        export ATOM_SCRIPT_PATH="./atom-${ATOM_CHANNEL}"
+        ln -s "./atom/${ATOM_APP_NAME}/Contents/Resources/app/atom.sh" "${ATOM_SCRIPT_PATH}"
+      fi
+      export PATH=${PATH}:./atom/${ATOM_APP_NAME}/Contents/Resources/app/:./atom/${ATOM_APP_NAME}/Contents/Resources/app/apm/node_modules/.bin
+    fi
