--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,7 @@ before_install:
         export APM_SCRIPT_NAME="apm-${ATOM_CHANNEL}"
       fi
       
-      export PATH=${PATH}:${HOME}/atom/usr/bin/
-      ls ${HOME}/atom/usr/bin/
+      export PATH=${PATH}:${HOME}/atom/usr/bin
     elif [ "${TRAVIS_OS_NAME}" = "osx" ]; then 
       if [ "${ATOM_CHANNEL}" = "stable" ] || [ "${ATOM_CHANNEL}" = "dev" ]; then
         export ATOM_APP_NAME="Atom.app"
@@ -42,9 +41,6 @@ before_install:
         ln -s "./atom/${ATOM_APP_NAME}/Contents/Resources/app/atom.sh" "${ATOM_SCRIPT_PATH}"
       fi
       
-      export PATH=${PATH}:./atom/${ATOM_APP_NAME}/Contents/Resources/app/
-      ls ./atom/${ATOM_APP_NAME}/Contents/Resources/app/
-      export PATH=${PATH}:./atom/${ATOM_APP_NAME}/Contents/Resources/app/apm/node_modules/.bin/
-      ls ./atom/${ATOM_APP_NAME}/Contents/Resources/app/apm/node_modules/.bin/
+      export PATH=${PATH}:./atom/${ATOM_APP_NAME}/Contents/Resources/app
+      export PATH=${PATH}:./atom/${ATOM_APP_NAME}/Contents/Resources/app/apm/node_modules/.bin
     fi
-  - echo $PATH
