--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "devDependencies": {
     "@types/execa": "^0.9.0",
+    "@types/is-ci": "^1.1.0",
     "@types/jest": "^23.1.1",
     "@types/node": "^10.3.4",
     "execa": "^0.10.0",
+    "is-ci": "^1.1.0",
     "jest": "^23.1.0",
     "ts-jest": "^22.4.6",
     "typescript": "^2.9.2"
